tests/expectations/compiler/bugs/b29306_fail.out
Error [ETYC0372017]: The type `test.aleo::Unknown` is not found in the current scope.
    --> compiler-test:6:38
     |
   6 |         let (v, f) = _dynamic_call::[(u32, Unknown)](a, b, c);
     |                                      ^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
